# drf_orjson_renderer

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tests.py  version.py
.github/workflows/: main.yml  publish.yml
drf_orjson_renderer/: encoders.py  parsers.py  renderers.py
requirements/: base.txt  dev.txt
tests/: __init__.py  test_parser.py  test_renderer.py  tests.py
